--- a/index.html
+++ b/index.html
@@ -24,8 +24,7 @@
     <img src="miriam.jpeg" alt="Headshot">
     <h2>About me</h2>
     <br><br>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo harum quos sed. Magnam asperiores voluptate beatae repellat sequi doloremque odio, 
-            recusandae ducimus itaque officiis ut neque tempora suscipit, maxime impedit id reiciendis sint harum! Dolorem blanditiis fuga quisquam? Cum perspiciatis deserunt labore laborum voluptatum reiciendis consectetur inventore illum totam quia.</p>
+        <p>I grew up in Fort Worth, TX. I’m the youngest of three siblings. I’m Mexican-American. I enjoy painting, creating crafts, gardening and watching basketball. Go Spurs!</p>
         
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium dolores odit tempore dicta veritatis porro esse voluptate amet iure placeat 
             doloribus asperiores facilis ullam qui exercitationem et, commodi ipsum ex.</p>
