--- a/index.html
+++ b/index.html
@@ -24,13 +24,11 @@
     <img src="miriam.jpeg" alt="Headshot">
     <h2>About me</h2>
     <br><br>
-        <p>I grew up in Fort Worth, TX. I’m the youngest of three siblings. I’m Mexican-American. I enjoy painting, creating crafts, gardening and watching basketball. Go Spurs!</p>
+        <p>My name is Miriam Williams, I grew up in Fort Worth, TX. I’m the youngest of three siblings. I’m Mexican-American. I enjoy painting, creating crafts, gardening and watching basketball. Go Spurs!</p>
         
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium dolores odit tempore dicta veritatis porro esse voluptate amet iure placeat 
-            doloribus asperiores facilis ullam qui exercitationem et, commodi ipsum ex.</p>
+        <p>I attended Texas Tech University and studied Marketing with a minor in Spanish. I have held several roles in marketing over the past few years. I got the chance to work with a Web Developer and realized I was interested in learning more about it.</p>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Accusantium dolores odit tempore dicta veritatis porro esse voluptate amet iure placeat 
-            doloribus asperiores facilis ullam qui exercitationem et, commodi ipsum ex.</p>
+        <p>Here I am!</p>
     <br><br>
     <button class="btn"><i class="fa fa-download"></i>Download My Resume</button>
     
