--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         
         <p>I attended Texas Tech University and studied Marketing with a minor in Spanish. I have held several roles in marketing over the past few years. I got the chance to work with a Web Developer and realized I was interested in learning more about it.</p>
 
-        <p>Here I am!</p>
+        <p>So here I am!</p>
     <br><br>
     <button class="btn"><i class="fa fa-download"></i>Download My Resume</button>
     
